--- a/Ghost/Base.lproj/Main.storyboard
+++ b/Ghost/Base.lproj/Main.storyboard
@@ -22,7 +22,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6xh-W7-izQ">
-                                <rect key="frame" x="175" y="318.5" width="25" height="30"/>
+                                <rect key="frame" x="170" y="318.5" width="35" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="x6p-3C-EyV"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done"/>
@@ -37,10 +40,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ah0-Jr-2HY">
-                                <rect key="frame" x="161" y="435" width="53" height="30"/>
-                                <state key="normal" title="Refresh"/>
+                                <rect key="frame" x="150" y="435" width="75" height="30"/>
+                                <state key="normal" title="New Game"/>
                                 <connections>
-                                    <action selector="refresh:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PV4-5R-5R7"/>
+                                    <action selector="newGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="boU-3d-mG0"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -57,6 +60,7 @@
                     <connections>
                         <outlet property="field" destination="6xh-W7-izQ" id="jWr-DA-1TA"/>
                         <outlet property="label" destination="joe-la-YNR" id="pSx-XS-edq"/>
+                        <outlet property="newGameButton" destination="Ah0-Jr-2HY" id="x1A-xt-lHe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
